cargo-features = ["edition2021"]

[package]
name = "nana"
version = "0.1.0"
authors = ["Denis Sologub <contedevel2010@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33", features = ["yaml"]}