cargo-features = ["edition2021"]

[package]
name = "nana"
version = "0.1.0"
authors = ["Denis Sologub <contedevel2010@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nanalib"
path = "src/lib/lib.rs"

[[bin]]
name = "nana"
path = "src/main.rs"

[dependencies]
clap = {version = "2.33.3", features = ["yaml"]}
indexmap = "1.6.2"